@@ -264,6 +264,9 @@ public:
 
     /**
         Returns the default filename.
+
+        @note This function can't be used with dialogs which have the @c wxFD_MULTIPLE style,
+              use GetFilenames() instead.
     */
     virtual wxString GetFilename() const;
 
@@ -298,6 +301,9 @@ public:
 
     /**
         Returns the full path (directory and filename) of the selected file.
+
+        @note This function can't be used with dialogs which have the @c wxFD_MULTIPLE style,
+              use GetPaths() instead.
     */
     virtual wxString GetPath() const;
 
