@@ -99,6 +99,9 @@ Changes in behaviour not resulting in compilation errors
 - wxSizer::RecalcSizes() shouldn't be called directly (note that it was never
   supposed to be called, only implemented), call Layout() instead.
 
+- wxFileDialog::GetPath() and wxFileDialog::GetFilename() now assert and return
+  an empty string if called on dialogs with the wxFD_MULTIPLE style.
+
 
 Changes in behaviour which may result in build errors
 -----------------------------------------------------
